# chute

./: Cargo.toml  Changelog.md  Readme.md  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml
benches/: comparison.rs  mp_vs_sp_write.rs
benchmarks/: .gitignore  Cargo.toml  Readme.md  bench.bat  run.bat
benchmarks/benches/: broadcast_mpmc.rs  broadcast_spmc.rs  common.rs  mpmc.rs  mpsc.rs  seq.rs  spsc.rs  unicast_spmc.rs
benchmarks/src/: main.rs  mpmc.rs  mpsc.rs  multi_chart.rs  seq.rs  spmc.rs  spsc.rs
doc/: how_it_works.md
examples/: mpmc.rs  readme.rs  spmc.rs  spmc_w_mutex.rs
src/: block.rs  lending_iterator.rs  lib.rs  mpmc.rs  mpmc2.rs  queue.rs  reader.rs  spmc.rs
src/unicast/: block.rs  mod.rs  read_guard.rs  spmc.rs
