[package]
name = "chute"
version = "0.1.0-alpha.1"
edition = "2021"
exclude = ["benchmarks", "doc"]
description = "Lockfree mpmc/spmc multicast queue."
categories = ["concurrency", "data-structures"]
keywords   = ["lockfree", "mpmc", "spmc", "multicast", "queue"]

[dependencies]
branch_hints = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
itertools = "0.13"
spin = "0.9.8"
arrayvec = "0.7"
crossbeam = "0.8"

[[bench]]
name = "mp_vs_sp_write"
harness = false