[package]
name = "chute"
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["benchmarks", "doc"]
repository  = "https://github.com/tower120/chute"
description = "Lockfree mpmc/spmc multicast queue."
categories = ["concurrency", "data-structures"]
keywords   = ["lockfree", "mpmc", "spmc", "multicast", "queue"]

[dependencies]
branch_hints = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
itertools = "0.13"
spin = "0.9.8"
arrayvec = "0.7"

[[bench]]
name = "mp_vs_sp_write"
harness = false