[package]
name = "chute"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["benchmarks", "doc"]
repository  = "https://github.com/tower120/chute"
description = "Lockfree mpmc/spmc broadcast queue."
categories = ["concurrency", "data-structures"]
keywords   = ["lockfree", "mpmc", "spmc", "broadcast", "queue"]

[dependencies]
branch_hints = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
itertools = "0.13"
rand = "0.8"
spin = "0.9.8"
arrayvec = "0.7"

[[bench]]
name = "mp_vs_sp_write"
harness = false