[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
chute = {path = "../"}
criterion = {version ="0.5"}
arrayvec = "0.7"
crossbeam = "0.8"
spin = "0.9"
tokio = {version = "1.41", features = ["sync"]}
json = "0.12"
str-macro = "1"
#charming = { version = "0.4", features = ["ssr"] }
charming = { git = "https://github.com/yuankunzhang/charming.git", rev = "aa18c23d752f32eeccad1ce40f6e85358bf8d5f1", features = ["ssr"] }

[[bench]]
name = "mpmc"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "seq"
harness = false